@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 26-08-2005 fixed: dvdplayer wouldn't play fightclub r1. now sets region mask to what disc reports it's from if available
  - 26-08-2005 chaged: httpapi to be more thread safe
  - 25-08-2005 fixed: dvdplayer would crash due to one thread deleting renderer, while one was using it. (rare crash)
  - 25-08-2005 added: new classes CSharedSection, CSharedLock, CExclusiveLock - used to protect resources, when multiply threads are allowed to read. 
